--- a/rootdir/etc/init.fz.rc
+++ b/rootdir/etc/init.fz.rc
@@ -20,42 +20,33 @@ on stock_profile
     chown system.system /sys/devices/system/cpu/cpu3/online  
     chmod 0664 /sys/devices/system/cpu/cpu3/online
 
+
     # CPU0
     write /sys/devices/system/cpu/cpu0/online 1
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1958400
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 268800
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor zzmoove
 
     # CPU1
     write /sys/devices/system/cpu/cpu1/online 1
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_max_freq 1958400
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_min_freq 268800
-    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor interactive
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor zzmoove
 
     # CPU2
     write /sys/devices/system/cpu/cpu2/online 1
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_max_freq 1958400
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_min_freq 268800
-    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor interactive
+    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor zzmoove
 
     # CPU3
     write /sys/devices/system/cpu/cpu3/online 1
     write /sys/devices/system/cpu/cpu3/cpufreq/scaling_max_freq 1958400
     write /sys/devices/system/cpu/cpu3/cpufreq/scaling_min_freq 268800
-    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor interactive
+    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor zzmoove
 
-    # interactive profile
-    write /sys/devices/system/cpu/cpufreq/interactive/above_hispeed_delay "20000 1400000:40000 1700000:20000"
-    write /sys/devices/system/cpu/cpufreq/interactive/go_hispeed_load 99
-    write /sys/devices/system/cpu/cpufreq/interactive/hispeed_freq 652800
-    write /sys/devices/system/cpu/cpufreq/interactive/io_is_busy 1
-    write /sys/devices/system/cpu/cpufreq/interactive/target_loads "95 652800:85 960000:75 1267200:80 1500000:90 1800000:98"
-    write /sys/devices/system/cpu/cpufreq/interactive/min_sample_time 40000
-    write /sys/devices/system/cpu/cpufreq/interactive/max_freq_hysteresis 0
-    write /sys/devices/system/cpu/cpufreq/interactive/timer_rate 30000
-    write /sys/devices/system/cpu/cpufreq/interactive/timer_slack "-1"
-    write /sys/devices/system/cpu/cpufreq/interactive/delta_boost 1
-    write /sys/devices/system/cpu/cpufreq/interactive/delta_boost_freq 0
+    # zzmoove profile
+    write /sys/devices/system/cpu/cpufreq/zzmoove/profile_number 5
 
     # CPU Input Boost
     write /sys/kernel/cpu_input_boost/ib_freqs "1190400 1497600"
@@ -67,11 +58,12 @@ on stock_profile
     write /sys/module/workqueue/parameters/power_efficient "Y"
 
     # Multicore power saving
-    write /sys/devices/system/cpu/sched_mc_power_savings 0
+    write /sys/devices/system/cpu/sched_mc_power_savings 1
 
     # I/O
     write /sys/block/mmcblk0/queue/iostats 0
     write /sys/block/mmcblk0/queue/read_ahead_kb 1024
+    setprop sys.io.scheduler "zen"
 
 on property:sys.boot_completed=1
     # according to Qcom this legacy value improves first launch latencies
